add some user auth, not all

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,9 @@
 <% include partials/_header %>
 
-<h1>Index Page</h1>
+<div class="container">
+  <h1>Welcome to Code Snippets!</h1>
+  <a href="/login">Login</a>
+  <a href="/signup">Sign Up</a>
+</div>
 
 <% include partials/_footer %>
