--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -7,11 +7,13 @@
   </head>
   <body>
     <nav>
-      <h1>Code Snippets!</h1>
-      <ul>
-        <li>Thing 1</li>
-        <li>Thing 2</li>
-        <li>Thing 3</li>
-        <li>Thing 4</li>
-      </ul>
+      <div class="container">
+        <h1><a href="/">Code Snippets!</a></h1>
+        <ul>
+          <li><a href="#">Thing 1</a></li>
+          <li><a href="#">Thing 2</a></li>
+          <li><a href="#">Thing 3</a></li>
+          <li><a href="#">Thing 4</a></li>
+        </ul>
+      </div>
     </nav>
