--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,34 @@
+body {
+  margin: 0; }
 
+nav {
+  background-color: #333; }
+  nav .container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-family: sans-serif;
+    color: #aaa;
+    padding: 20px 0; }
+    nav .container a {
+      color: #aaa;
+      text-decoration: none;
+      transition: 100ms; }
+      nav .container a:hover {
+        color: #777; }
+    nav .container h1 {
+      font-size: 24px;
+      margin: 0; }
+    nav .container ul {
+      padding: 0;
+      margin: 0;
+      display: flex; }
+      nav .container ul li {
+        list-style: none;
+        margin: 0 10px; }
+
+.container {
+  width: 90%;
+  margin: 0 auto; }
 
 /*# sourceMappingURL=style.css.map */
