--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,7 @@
     <footer>
-      <p>Footer</p>
+      <div class="container">
+        <p>Footer</p>        
+      </div>
     </footer>
   </body>
 </html>
