sync up snippets with users

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,8 +1,13 @@
 body {
-  margin: 0; }
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100vh; }
 
 nav {
-  background-color: #333; }
+  background-color: #333;
+  margin-bottom: 30px; }
   nav .container {
     display: flex;
     align-items: center;
@@ -27,8 +32,32 @@ nav {
         list-style: none;
         margin: 0 10px; }
 
+.body {
+  flex-grow: 1; }
+
 .container {
   width: 90%;
   margin: 0 auto; }
+
+.errors {
+  border: 2px solid red;
+  background-color: rgba(255, 0, 0, 0.2);
+  color: red;
+  margin-top: 20px; }
+  .errors ul {
+    padding: 5px 10px; }
+    .errors ul li {
+      list-style: none; }
+
+.add-snippet-form label {
+  display: block;
+  margin: 15px 0 5px; }
+.add-snippet-form textarea {
+  resize: none; }
+
+footer {
+  background-color: #333;
+  color: #aaa;
+  text-align: center; }
 
 /*# sourceMappingURL=style.css.map */
