--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,11 +1,13 @@
-<% include partials/_header %>
+<% include partials/_loggedInHeader %>
 
 <div class="body">
 
   <div class="container">
-    <h1>Welcome to Code Snippets!</h1>
+    <h1>Home</h1>
+    <h2>Welcome <%= username %>!</h2>
     <a href="/login">Login</a>
     <a href="/signup">Sign Up</a>
+    <a href="/logout">Logout</a>
   </div>
   
 </div>
