--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,6 +1,6 @@
     <footer>
       <div class="container">
-        <p>Footer</p>        
+        <p>&copy; 2017 Code Snippets</p>        
       </div>
     </footer>
   </body>
