--- a/views/add_snippet.ejs
+++ b/views/add_snippet.ejs
@@ -19,22 +19,22 @@
       <div class="form-group">
         <label for="language">Language:</label>
         <select name="language">
-          <option value="c">C</option>
-          <option value="c-sharp">C#</option>
-          <option value="c-plus-plus">C++</option>
-          <option value="css">CSS</option>
-          <option value="html">HTML</option>
-          <option value="java">Java</option>
-          <option value="javascript">Javascript</option>
-          <option value="less">Less</option>
-          <option value="objective-c">Objective-C</option>
-          <option value="objective-c-plus-plus">Objective-C++</option>
-          <option value="perl">Perl</option>
-          <option value="php">PHP</option>
-          <option value="python">Python</option>
-          <option value="ruby">Ruby</option>
-          <option value="sass">Sass</option>
-          <option value="scss">SCSS</option>
+          <option value="C">C</option>
+          <option value="C#">C#</option>
+          <option value="C++">C++</option>
+          <option value="CSS">CSS</option>
+          <option value="HTML">HTML</option>
+          <option value="Java">Java</option>
+          <option value="Javascript">Javascript</option>
+          <option value="Less">Less</option>
+          <option value="Objective-C">Objective-C</option>
+          <option value="Objective-C++">Objective-C++</option>
+          <option value="Perl">Perl</option>
+          <option value="PHP">PHP</option>
+          <option value="Python">Python</option>
+          <option value="Ruby">Ruby</option>
+          <option value="Sass">Sass</option>
+          <option value="SCSS">SCSS</option>
         </select>
       </div>
       <div class="form-group">
