--- a/public/css/style.css
+++ b/public/css/style.css
@@ -69,6 +69,9 @@ nav {
     border: 1px solid #333;
     padding: 3px; }
 
+.search-form {
+  display: inline; }
+
 footer {
   background-color: #333;
   color: #aaa;
