--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -100,6 +100,10 @@ nav {
   }
 }
 
+.search-form {
+  display: inline;
+}
+
 footer {
   background-color: $color-primary;
   color: $color-tertiary;
