--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -10,8 +10,9 @@
       <div class="container">
         <h1><a href="/">Code Snippets!</a></h1>
         <ul>
+          <li><a href="/snippets/all">Explore</a></li>
           <li><a href="/add_snippet">Add</a></li>
-          <li><a href="/profile"><%= username %></a></li>
+          <li><a href="/profile">Profile</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
       </div>
