--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -8,7 +8,7 @@
   <body>
     <nav>
       <div class="container">
-        <h1><a href="/">Code Snippets!</a></h1>
+        <h1><a href="/home">Code Snippets!</a></h1>
         <ul>
           <li><a href="/snippets/all">Explore</a></li>
           <li><a href="/add_snippet">Add</a></li>
