--- a/views/add_snippet.ejs
+++ b/views/add_snippet.ejs
@@ -41,8 +41,9 @@
         <label for="tags">Tags: (separate by semicolon)</label>
         <input type="text" id="tags" name="tags">
       </div>
-      <input type="submit" value="Add Snippet" />
+      <button class="success-button" type="submit">Add Snippet</button>
     </form>
+    <button class="terminate-button" onclick="window.location.href='/profile'">Cancel</button>
 
   </div>
 
