--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -3,6 +3,19 @@
 <div class="body">
 
   <div class="container">
+
+    <form class="search-form" action="/search_profile_snippets" method="POST">
+      <input type="text" name="search" placeholder="Search snippets" />
+      <select name="search_type">
+        <option value="title">Title</option>
+        <option value="language">Language</option>
+        <option value="tag">Tags</option>
+      </select>
+      <input type="submit" value="Search" />
+    </form>
+
+    <button onclick="window.location.href='/profile'">All</button>
+
     <% snippets.forEach((snippet) => { %>
       <div class="snippet">
         <h2><%= snippet.title %> -
