--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -3,10 +3,11 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="/css/style.css">
   </head>
   <body>
-    <nav>
+    <nav data-user-id="<%= userid %>">
       <div class="container">
         <h1><a href="/home">Code Snippets!</a></h1>
         <ul>
