--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,7 +1,10 @@
     <footer>
       <div class="container">
-        <p>&copy; 2017 Code Snippets</p>        
+        <p>&copy; 2017 Code Snippets</p>
       </div>
     </footer>
+    <script type="text/javascript" src="/script.js">
+
+    </script>
   </body>
 </html>
