--- a/views/search_snippets.ejs
+++ b/views/search_snippets.ejs
@@ -22,9 +22,9 @@
       <% if (snippet[searchBy].toLowerCase().indexOf(searchTerm.toLowerCase()) !== -1) { %>
 
         <div class="snippet">
-          <h2><%= snippet.title %> -
+          <h2><%= snippet.title %> 
             <% if (user === snippet.creator) { %>
-              <a href="/edit/<%= snippet._id %>">EDIT</a>
+              - <a href="/edit/<%= snippet._id %>">EDIT</a>
             <% } %>
           </h2>
           <h3><%= snippet.language %></h3>
