--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -109,6 +109,7 @@ form {
     border: 1px solid $color-primary;
     padding: 10px;
     color: $color-white;
+    white-space: pre-wrap;
   }
   .single-tag {
     background-color: $color-tertiary;
