--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -11,6 +11,7 @@
       <div class="container">
         <h1><a href="/home">Code Snippets!</a></h1>
         <ul>
+          <li><a href="/snippets/favs">Favs</a></li>
           <li><a href="/snippets/all">Explore</a></li>
           <li><a href="/add_snippet">Add</a></li>
           <li><a href="/profile">Profile</a></li>
