--- a/views/fav_snippets.ejs
+++ b/views/fav_snippets.ejs
@@ -3,8 +3,7 @@
 <div class="body">
 
   <div class="container">
-
-    <form class="search-form" action="/search_snippets/<%= user %>" method="POST">
+    <form class="search-form" action="/search_snippets" method="POST">
       <input type="text" name="search" placeholder="Search snippets" />
       <select name="search_type">
         <option value="title">Title</option>
@@ -14,22 +13,26 @@
       <input type="submit" value="Search" />
     </form>
 
-    <button onclick="window.location.href='/profile'">All</button>
+    <button onclick="window.location.href='/snippets/all'">All</button>
 
     <% snippets.forEach((snippet) => { %>
-      <div class="snippet">
-        <h2><%= snippet.title %> -
-          <a href="/edit/<%= snippet._id %>">EDIT</a>
-        </h2>
+      <div data-snippet-id="<%= snippet._id %>" class="snippet">
+
+          <h2><%= snippet.title %>
+            <% if (user === snippet.creator) { %>
+              - <a href="/edit/<%= snippet._id %>">EDIT</a>
+              <% } %>
+            </h2>
+
         <h3><%= snippet.language %></h3>
-        <h4><%= snippet.createdAt %></h4>
+        <h4><a class="creator" href="/snippets/<%= snippet.creator %>"><%= snippet.creator %></a> - <%= snippet.createdAt %></h4>
         <section class="snippet-code">
           <pre><%= snippet.body %></pre>
         </section>
         <section class="snippet-notes">
           <p><%= snippet.notes %></p>
         </section>
-        <% if (snippet.tags.length > 0 && snippet.tags[0] !== '') { %>
+        <% if (snippet.tags !== undefined && snippet.tags.length > 0 && snippet.tags[0] !== '') { %>
           <section class="snippet-tags">
             <p>
               <% snippet.tags.forEach((tag) => { %>
