--- a/views/search_snippets.ejs
+++ b/views/search_snippets.ejs
@@ -3,7 +3,7 @@
 <div class="body">
 
   <div class="container">
-    <form class="search-form" action="/search_snippets" method="POST">
+    <form class="search-form" action="/search_snippets/<%= username %>" method="POST">
       <input type="text" name="search" placeholder="Search snippets" />
       <select name="search_type">
         <option value="title">Title</option>
@@ -22,7 +22,7 @@
       <% if (snippet[searchBy].toLowerCase().indexOf(searchTerm.toLowerCase()) !== -1) { %>
 
         <div class="snippet">
-          <h2><%= snippet.title %> 
+          <h2><%= snippet.title %>
             <% if (user === snippet.creator) { %>
               - <a href="/edit/<%= snippet._id %>">EDIT</a>
             <% } %>
