--- a/views/search_snippets.ejs
+++ b/views/search_snippets.ejs
@@ -15,11 +15,11 @@
 
     <button onclick="window.location.href='/snippets/all'">All</button>
 
-    <h1>Searching for <%= searchTerm %> by <%= searchBy %></h1>
+    <h1>Searching for "<%= searchTerm %>" by <%= searchBy %></h1>
 
     <% snippets.forEach((snippet) => { %>
       <% snippet.tag = snippet.tags.join('') %>
-      <% if (snippet[searchBy].toLowerCase().indexOf(searchTerm.toLowerCase()) !== -1) { %>
+      <% if (snippet[searchBy].toLowerCase().indexOf(searchTerm.toLowerCase()) != -1) { %>
 
         <div class="snippet">
           <h2><%= snippet.title %>
