--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="/snippets/favs">Favs</a></li>
           <li><a href="/snippets/all">Explore</a></li>
-          <li><a href="/add_snippet">Add</a></li>
+          <li><a href="/snippet/add">Add</a></li>
           <li><a href="/profile">Profile</a></li>
           <li><a href="/logout">Logout</a></li>
         </ul>
