--- a/views/add_snippet.ejs
+++ b/views/add_snippet.ejs
@@ -3,7 +3,7 @@
 <div class="body">
 
   <div class="container">
-    <form class="add-snippet-form" action="/add_snippet" method="POST">
+    <form class="add-snippet-form" action="/snippet/add" method="POST">
       <div class="form-group">
         <label for="title">Title:</label>
         <input type="text" id="title" name="title">
