--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -61,6 +61,18 @@ nav {
 .container {
   width: 90%;
   margin: 0 auto;
+  h1 {
+    text-align: center;
+  }
+}
+
+.index {
+  text-align: center;
+  h1 {
+    font-size: 46px;
+    margin-top: 60px;
+    margin-bottom: 60px;
+  }
 }
 
 .errors {
@@ -76,8 +88,45 @@ nav {
   }
 }
 
+.form-container {
+  width: 400px;
+  margin: 0 auto;
+}
+
 form {
   display: inline;
+  max-width: 300px;
+  input, textarea, select {
+    width: 100%;
+    font-size: 12px;
+    padding: 3px;
+  }
+  div {
+    display: inline;
+  }
+}
+
+.login-signup-form {
+  input {
+    font-size: 14px;
+    padding: 4px;
+    margin: 8px;
+  }
+  button {
+    width: 100px;
+  }
+}
+
+.form-group {
+  display: block;
+}
+
+.float-left {
+  float: left;
+}
+
+.clear {
+  clear: both;
 }
 
 .add-snippet-form {
@@ -120,6 +169,9 @@ form {
 
 .search-form {
   display: inline;
+  input, select {
+    width: auto;
+  }
 }
 
 @mixin button($color) {
@@ -131,6 +183,7 @@ form {
   border: 3px solid $color;
   color: $color;
   cursor: pointer;
+  text-decoration: none;
   &:hover {
     background-color: $color;
     color: $color-white;
@@ -143,6 +196,10 @@ form {
 
 .terminate-button {
   @include button(red);
+}
+
+.index-button {
+  @include button($color-secondary);
 }
 
 #delete-page {
