--- a/views/all_snippets.ejs
+++ b/views/all_snippets.ejs
@@ -3,17 +3,23 @@
 <div class="body">
 
   <div class="container">
-    <form class="search-form" action="/search_snippets" method="POST">
-      <input type="text" name="search" placeholder="Search snippets" />
-      <select name="search_type">
-        <option value="title">Title</option>
-        <option value="language">Language</option>
-        <option value="tag">Tags</option>
-      </select>
-      <input type="submit" value="Search" />
-    </form>
 
-    <button onclick="window.location.href='/snippets/all'">All</button>
+    <div class="float-left">
+
+      <form class="search-form" action="/search_snippets" method="POST">
+        <input type="text" name="search" placeholder="Search snippets" />
+        <select name="search_type">
+          <option value="title">Title</option>
+          <option value="language">Language</option>
+          <option value="tag">Tags</option>
+        </select>
+        <button type="submit">Search</button>
+      </form>
+      <button onclick="window.location.href='/snippets/all'">All</button>
+
+    </div>
+
+    <h1 class="clear">Explore Snippets</h1>
 
     <% let favsString = '' %>
     <% favs.forEach((fav) => { %>
