--- a/views/fav_snippets.ejs
+++ b/views/fav_snippets.ejs
@@ -3,17 +3,22 @@
 <div class="body">
 
   <div class="container">
-    <form class="search-form" action="/search_snippets" method="POST">
-      <input type="text" name="search" placeholder="Search snippets" />
-      <select name="search_type">
-        <option value="title">Title</option>
-        <option value="language">Language</option>
-        <option value="tag">Tags</option>
-      </select>
-      <input type="submit" value="Search" />
-    </form>
+    <div class="float-left">
 
-    <button onclick="window.location.href='/snippets/all'">All</button>
+      <form class="search-form" action="/search_snippets" method="POST">
+        <input type="text" name="search" placeholder="Search snippets" />
+        <select name="search_type">
+          <option value="title">Title</option>
+          <option value="language">Language</option>
+          <option value="tag">Tags</option>
+        </select>
+        <input type="submit" value="Search" />
+      </form>
+      <button onclick="window.location.href='/snippets/all'">All</button>
+
+    </div>
+
+    <h1 class="clear">Your Favorites</h1>
 
     <% snippets.forEach((snippet) => { %>
       <div data-snippet-id="<%= snippet._id %>" class="snippet">
