--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,12 +2,12 @@
 
 <div class="body">
 
-  <div class="container">
+  <div class="container index">
     <h1>Welcome to Code Snippets!</h1>
-    <a href="/login">Login</a>
-    <a href="/signup">Sign Up</a>
+    <a class="index-button" href="/login">Login</a>
+    <a class="index-button" href="/signup">Sign Up</a>
   </div>
-  
+
 </div>
 
 <% include partials/_footer %>
