--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -4,17 +4,23 @@
 
   <div class="container">
 
-    <form class="search-form" action="/search_snippets/<%= user %>" method="POST">
-      <input type="text" name="search" placeholder="Search snippets" />
-      <select name="search_type">
-        <option value="title">Title</option>
-        <option value="language">Language</option>
-        <option value="tag">Tags</option>
-      </select>
-      <input type="submit" value="Search" />
-    </form>
+    <div class="float-left">
 
-    <button onclick="window.location.href='/profile'">All</button>
+      <form class="search-form" action="/search_snippets/<%= user %>" method="POST">
+        <input type="text" name="search" placeholder="Search snippets" />
+        <select name="search_type">
+          <option value="title">Title</option>
+          <option value="language">Language</option>
+          <option value="tag">Tags</option>
+        </select>
+        <input type="submit" value="Search" />
+      </form>
+
+      <button onclick="window.location.href='/profile'">All</button>
+
+    </div>
+
+    <h1 class="clear">Your Snippets</h1>
 
     <% snippets.forEach((snippet) => { %>
       <div class="snippet">
