--- a/views/search_snippets.ejs
+++ b/views/search_snippets.ejs
@@ -3,13 +3,18 @@
 <div class="body">
 
   <div class="container">
+
     <form class="search-form" action="/search_snippets/<%= username %>" method="POST">
-      <input type="text" name="search" placeholder="Search snippets" />
-      <select name="search_type">
-        <option value="title">Title</option>
-        <option value="language">Language</option>
-        <option value="tag">Tags</option>
-      </select>
+      <div class="form-group">
+
+        <input type="text" name="search" placeholder="Search snippets" />
+        <select name="search_type">
+          <option value="title">Title</option>
+          <option value="language">Language</option>
+          <option value="tag">Tags</option>
+        </select>
+        
+      </div>
       <button type="submit">Search</button>
     </form>
 
