--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -2,13 +2,19 @@
 
 <div class="body">
 
-  <div class="container">
+  <div class="container index">
     <h1>Sign Up!</h1>
-    <form action="/signup" method="POST">
-      <input type="text" name="username" placeholder="Username" autofocus />
-      <input type="password" name="password" placeholder="password" />
-      <input type="submit" value="Sign Up" />
-    </form>
+    <div class="form-container">
+
+      <form class="login-signup-form" action="/signup" method="POST">
+        <input type="text" name="username" placeholder="Username" autofocus />
+        <input type="password" name="password" placeholder="Password" />
+        <button class="success-button" type="submit">Sign Up</button>
+      </form>
+
+      <p>Already have an account? <a href="/login">Log In</a></p>
+
+    </div>
     <% if (errors.length > 0) { %>
       <div class="errors">
         <ul>
@@ -19,7 +25,7 @@
       </div>
     <% } %>
   </div>
-  
+
 </div>
 
 <% include partials/_footer %>
