--- a/public/css/style.css
+++ b/public/css/style.css
@@ -110,9 +110,10 @@ form {
   .snippet .snippet-code {
     background-color: #333;
     border: 1px solid #333;
-    padding: 10px;
-    color: #F0F0F0;
-    white-space: pre-wrap; }
+    padding: 2px 10px;
+    color: #F0F0F0; }
+    .snippet .snippet-code pre {
+      white-space: pre-wrap; }
   .snippet .single-tag {
     background-color: #aaa;
     border: 1px solid #333;
