--- a/views/search_snippets.ejs
+++ b/views/search_snippets.ejs
@@ -13,7 +13,7 @@
           <option value="language">Language</option>
           <option value="tag">Tags</option>
         </select>
-        
+
       </div>
       <button type="submit">Search</button>
     </form>
@@ -33,7 +33,7 @@
             <% } %>
           </h2>
           <h3><%= snippet.language %></h3>
-          <h4><a class="creator" href="/snippets/<%= snippet.creator %>"><%= snippet.creator %></a> - <%= snippet.createdAt %></h4>
+          <h4><a class="creator" href="/snippets/user/<%= snippet.creator %>"><%= snippet.creator %></a> - <%= snippet.createdAt %></h4>
           <section class="snippet-code">
             <pre><%= snippet.body %></pre>
           </section>
