--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -156,9 +156,11 @@ form {
   .snippet-code {
     background-color: $color-primary;
     border: 1px solid $color-primary;
-    padding: 10px;
+    padding: 2px 10px;
     color: $color-white;
-    white-space: pre-wrap;
+    pre {
+      white-space: pre-wrap;
+    }
   }
   .single-tag {
     background-color: $color-tertiary;
