--- a/views/edit_snippet.ejs
+++ b/views/edit_snippet.ejs
@@ -3,35 +3,41 @@
 <div class="body">
 
   <div class="container">
-    <form class="add-snippet-form" action="/add_snippet" method="POST">
-      <div class="form-group">
-        <label for="title">Title:</label>
-        <input type="text" id="title" name="title" value="<%= snippet.title %>" />
-      </div>
-      <div class="form-group">
-        <label for="body">Code Snippet:</label>
-        <textarea id="body" name="body" rows="8" cols="80"><%= snippet.body %></textarea>
-      </div>
-      <div class="form-group">
-        <label for="notes">Notes:</label>
-        <input type="text" id="notes" name="notes" value="<%= snippet.notes %>" />
-      </div>
-      <div class="form-group">
-        <label for="language">Language:</label>
-        <select name="language">
-          <%- options %>
-        </select>
-      </div>
-      <div class="form-group">
-        <% snippet.tags = snippet.tags.join('; ') %>
-        <label for="tags">Tags: (separate by semicolon)</label>
-        <input type="text" id="tags" name="tags" value="<%= snippet.tags %>" />
-      </div>
-      <button class="success-button" type="submit">Edit Snippet</button>
-    </form>
-    <form action="/delete/<%= snippet.id %>" method="POST">
-      <button type="submit" class="terminate-button">Delete Snippet</button>
-    </form>
+    <h1>Edit "<%= snippet.title %>"</h1>
+
+    <div class="form-container">
+
+      <form class="add-snippet-form" action="/edit/<%= snippet._id %>" method="POST">
+        <div class="form-group">
+          <label for="title">Title:</label>
+          <input type="text" id="title" name="title" value="<%= snippet.title %>" />
+        </div>
+        <div class="form-group">
+          <label for="body">Code Snippet:</label>
+          <textarea id="body" name="body" rows="8" cols="80"><%= snippet.body %></textarea>
+        </div>
+        <div class="form-group">
+          <label for="notes">Notes:</label>
+          <input type="text" id="notes" name="notes" value="<%= snippet.notes %>" />
+        </div>
+        <div class="form-group">
+          <label for="language">Language:</label>
+          <select name="language">
+            <%- options %>
+          </select>
+        </div>
+        <div class="form-group">
+          <% snippet.tags = snippet.tags.join('; ') %>
+          <label for="tags">Tags: (separate by semicolon)</label>
+          <input type="text" id="tags" name="tags" value="<%= snippet.tags %>" />
+        </div>
+        <button class="success-button" type="submit">Update Snippet</button>
+      </form>
+      <form action="/delete/<%= snippet.id %>" method="POST">
+        <button type="submit" class="terminate-button">Delete Snippet</button>
+      </form>
+
+    </div>
 
   </div>
 
