--- a/views/partials/_loggedInHeader.ejs
+++ b/views/partials/_loggedInHeader.ejs
@@ -9,7 +9,7 @@
   <body>
     <nav data-user-id="<%= userid %>">
       <div class="container">
-        <h1><a href="/home">Code Snippets!</a></h1>
+        <h1><a href="/snippets/all">Code Snippets!</a></h1>
         <ul>
           <li><a href="/snippets/favs">Favs</a></li>
           <li><a href="/snippets/all">Explore</a></li>
