--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -213,3 +213,10 @@ footer {
   color: $color-tertiary;
   text-align: center;
 }
+
+.api-link {
+  color: green;
+  &:hover {
+    color: white;
+  }
+}
