--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,5 +1,6 @@
     <footer>
       <div class="container">
+        <p><a target="_blank" class="api-link" href="/api/codesnippets">API Endpoint</a></p>
         <p>&copy; 2017 Code Snippets</p>
       </div>
     </footer>
