add dynamic year and change name of footer

--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,7 +1,9 @@
     <footer>
       <div class="container">
         <p><a target="_blank" class="api-link" href="/api/codesnippets">API Endpoint</a></p>
-        <p>&copy; 2017 Code Snippets</p>
+        <% let d = new Date(); %>
+        <% let year = d.getFullYear(); %>
+        <p>&copy; <%= year %> Austin Chappell</p>
       </div>
     </footer>
     <script type="text/javascript" src="/script.js">
